Add .gitattributes to normalize line endings

--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - SnapTalk</title>
-    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="../css/login.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
@@ -14,7 +14,12 @@
         <p class="subtext">Login to your SnapTalk account</p>
 
         <input type="email" name="email" placeholder="Email" required />
-        <input type="password" name="password" placeholder="Password" required />
+        <input
+          type="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
 
         <button type="submit">Continue</button>
 
@@ -26,6 +31,6 @@
       </form>
     </div>
 
-    <script src="js/login.js"></script>
+    <script src="../js/login.js"></script>
   </body>
 </html>
