--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup - SnapTalk</title>
-    <link rel="stylesheet" href="css/signup.css" />
+    <link rel="stylesheet" href="../css/signup.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
@@ -15,8 +15,18 @@
 
         <input type="text" name="name" placeholder="Name" required />
         <input type="email" name="email" placeholder="Email" required />
-        <input type="password" name="password" placeholder="Password" required />
-        <input type="password" name="password2" placeholder="Confirm Password" required />
+        <input
+          type="password"
+          name="password"
+          placeholder="Password"
+          required
+        />
+        <input
+          type="password"
+          name="password2"
+          placeholder="Confirm Password"
+          required
+        />
 
         <button type="submit">Register</button>
 
@@ -27,6 +37,6 @@
         </p>
       </form>
     </div>
-    <script src="js/signup.js"></script>
+    <script src="../js/signup.js"></script>
   </body>
 </html>
