--- a/frontend/public/editProfile.html
+++ b/frontend/public/editProfile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/profile.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="css/editProfile.css" />
+    <link rel="stylesheet" href="../css/editProfile.css" />
   </head>
   <body>
     <div class="profile-header">
@@ -53,6 +53,6 @@
       </div>
     </div>
 
-    <script src="js/editProfile.js"></script>
+    <script src="../js/editProfile.js"></script>
   </body>
 </html>
