--- a/frontend/public/post.html
+++ b/frontend/public/post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Post - SnapTalk</title>
-    <link rel="stylesheet" href="css/post.css" />
+    <link rel="stylesheet" href="../css/post.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
@@ -26,6 +26,6 @@
         <p class="error" id="errorMsg"></p>
       </form>
     </div>
-    <script src="js/post.js"></script>
+    <script src="../js/post.js"></script>
   </body>
 </html>
