--- a/frontend/public/home.html
+++ b/frontend/public/home.html
@@ -35,6 +35,13 @@
         </div>
       </div>
 
+      <!-- Hero Section -->
+      <section class="hero">
+        <h1>Welcome to SnapTalk 🚀</h1>
+        <p>Connect, share, and explore with people around the world.</p>
+      </section>
+
+
       <!-- Post Feed -->
       <div class="feed"></div>
     </div>
